--- a/1-counter/index.html
+++ b/1-counter/index.html
@@ -6,14 +6,14 @@
     section {
       margin:50px auto 0px auto;
       width:400px;
-      font:normal 16pt 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
+      font:normal 16pt 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
     h1 {
-      font:normal 24pt 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
+      font:normal 24pt 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       margin-bottom:40px;
     }
     button {
-      font:normal 14pt 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
+      font:normal 14pt 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
     p {
       border:solid 2px #4597EF;
@@ -41,16 +41,6 @@
   </section>
 
   <script src="node_modules/core-js/client/core.min.js"></script>
-  <script src="node_modules/requirejs/require.js"></script>
-  <script>
-    requirejs.config({
-        baseUrl: 'out',
-        paths: {
-          'fable-core': '../node_modules/fable-core/fable-core.min',
-          'virtual-dom': '../lib/virtual-dom'
-        }
-    });
-    requirejs(["todo"]);
-  </script>
+  <script src="out/bundle.js"></script>
 </body>
 </html>
